--- a/index.html
+++ b/index.html
@@ -175,6 +175,194 @@
 		
 		</div>
 </div>
+	
+<div id="events">
+<section class="event-slider">
+    <div class="slider-heading">
+        <h3>Our Events</h3>
+    </div>
+
+    <ul id="autoWidth" class="cs-hidden">
+
+        <!---One-->
+        <li class="item-a">
+        <div class="event-class">
+                <a href="#">
+                    <strong>Box Cricket</strong>
+                    <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\boxcricket.jpg" alt="BoxCricket"> 
+                </a>
+                <p>BOX CRICKET involves two teams with 6-
+                    8 players each playing in a closed space, usually a netcovered
+                    turf. Matches are played within an hour’s time
+                    frame with rules set before the game or tournament.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScrqwYbvvaeSYVB62DGKcNU4phcWbTmB_UUSF-TUWJzo9Z4JQ/viewform?usp=sf_link" class="register-btn">Register Here</a>
+        </div>
+        </li>
+
+        <!---Two-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Foosball</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\foosball.jpg" alt="FoosBall"> 
+                    </a>
+                    <p>Foosball is a table-top
+                        game that is loosely based on association-football . The
+                        aim of the game is to move the ball into the
+                        opponent's goal by manipulating rods which have
+                        figures attached.
+                       </p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScRB1JK4os5iVuaRsiPwl9bsljWCd1ORoVt0-LV2nEGYdFa8w/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+            
+        <!---Three-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Table Tennis</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\tabletennis.jpg" alt="TableTennis"> 
+                    </a>
+                    <p>Table tennis is a sport in which two or four players hit a
+                        lightweight ball, also known as the ping-pong ball, back and
+                        forth across a table using small solid rackets. The game takes
+                        place on a hard table divided by a net.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdEnljWg0p7rCck5QOfHk4SKOF0HtZ-dYxieHyHFWG1m-wwbw/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+            <!---Four-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Chess</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\chess.jpg" alt="Chess"> 
+                    </a>
+                    <p>Chess, one of the oldest and most popular board games, played
+                        by two opponents on a checkered board with specially designed
+                        pieces of contrasting colours, commonly white and black.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdnsWxK-Ms1lrX7jAxyJPgJy0A_jq70rgCF8s3DbqBsQ-e3XQ/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+
+            <!---Five-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Carrom</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\carrom.jpg" alt="Carrom"> 
+                    </a>
+                    <p>Carrom is an indoor tabletop game. It is played for fun
+                        and as a competitive sport. There are two players or two
+                        teams. The time it takes to play a game changes with
+                        each game. It is a brain game.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfp8-DN8ez_sHjilG7Dxk_TG598XNlkMhnORnFa4-gYEO60eg/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+
+            <!---Six-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>E-Sports</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\e-sports.jpg" alt="ESports"> 
+                    </a>
+                    <p>ESports turns online gaming into a spectator sport.
+                        It mimics the experience of watching a professional sporting
+                        event, except instead of watching a physical event, spectators
+                        watch video gamers compete against each other.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeombq7CSHKFl2L7CI9QmkxdY3ANOV8KTrvJWo4GsazQ0OR-w/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+
+
+            <!---Seven-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Cricket (11 v 11)</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\cricket.jpg" alt="Cricket"> 
+                    </a>
+                    <p>Cricket is played between two teams of eleven players
+                        each. One team, which is batting, tries to score runs, while
+                        the other team is fielding, and tries to prevent this.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdme6iyx8ysfw5d2QbLwgWS6TjEaHbn9DH_1LQF77hv3-sgdQ/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+
+
+            <!---Eight-->
+        <li class="item-a">
+            <div class="event-class">
+                    <a href="#">
+                        <strong>Football</strong>
+                        <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\football.jpg" alt="Football"> 
+                    </a>
+                    <p>Football is a team sport played between two teams of 11
+                        players each. It is played on a rectangular grass field, or an
+                        artificial turf, with a goal at each end of the field. </p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFoaE4jxpjxjL_q8P6a8EKDLFNXIhyrmS2fd3l2tiD9n0AEA/viewform?usp=sf_link" class="register-btn">Register Here</a>
+            </div>
+            </li>
+
+
+            <!---Nine-->
+            <li class="item-a">
+                <div class="event-class">
+                        <a href="#">
+                            <strong>Basketball</strong>
+                            <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\basketball.jpg" alt="Basketball"> 
+                        </a>
+                        <p>Basketball is a team sport in which two teams of five
+                            active players. Each try to score points against one
+                            another by propelling a ball through a 10 feet high
+                            hoop under organised rules.</p>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeR8IYkQ4R6OOqDA2fi0fQNTntb4koHto6JF2LjTFBjg6bamA/viewform?usp=sf_link" class="register-btn">Register Here</a>
+                </div>
+            </li>
+
+             <!---Ten-->
+             <li class="item-a">
+                <div class="event-class">
+                        <a href="#">
+                            <strong>Badminton</strong>
+                            <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\badminton.jpg" alt="Badminton"> 
+                        </a>
+                        <p>Badminton is a racquet sport played by either two
+                            opposing players (singles) or two opposing pairs. The players strike the shuttlecock with their rackets so that it
+                            passes over the net and into the opponents' half of the
+                            court.</p>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcu8FM80MNiPq9oYsCiqXefrVmiAlJ_jeEFsYx8wXea99Suw/viewform?usp=sf_link" class="register-btn">Register Here</a>
+                </div>
+                </li>
+
+      </ul>
+
+
+
+
+</section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js" integrity="sha512-Gfrxsz93rxFuB7KSYlln3wFqBaXUc1jtt3dGCp+2jTb563qYvnUBM/GP2ZUtRC27STN/zUamFtVFAIsRFoT6/w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+     $(document).ready(function() {
+    $('#autoWidth').lightSlider({
+        autoWidth:true,
+        loop:true,
+        onSliderLoad: function() {
+            $('#autoWidth').removeClass('cS-hidden');
+        } 
+    });  
+  })
+</script>
+
 
 <div class="header" style="background-color: #fff;">
 	<div class="container">
