--- a/prabalya_kunal.html
+++ b/prabalya_kunal.html
@@ -6,7 +6,7 @@
 	<title>
 		Prabalya 2023
 	</title>
-	<link rel="stylesheet" type="text/css" href="../new/prabalya_shreyas.css">
+	<link rel="stylesheet" type="text/css" href="../new/prabalya_kunal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
