--- a/prabalya_kunal.html
+++ b/prabalya_kunal.html
@@ -34,9 +34,9 @@
 					<button id="menu">≡</button>
 					<div class="dropdown">
 						<a href="index.html">Home</a>
-						<a href="#events">Events</a>
-						<a href="#sponsors">Sponsors</a>
-						<a href="#contact">Contact</a>
+						<a href="events">Events</a>
+						<a href="sponsors">Sponsors</a>
+						<a href="contact">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -189,7 +189,7 @@
         <div class="event-class">
                 <a href="#">
                     <strong>Box Cricket</strong>
-                    <img src="C:\Users\Kunal Shenoy\Desktop\Prabalya Website\Sport Images\boxcricket.jpg" alt="BoxCricket"> 
+                    <img src="boxcricket.jpg" alt="BoxCricket"> 
                 </a>
                 <p>BOX CRICKET involves two teams with 6-
                     8 players each playing in a closed space, usually a netcovered
